Replace Scala/Spark engine with Python + Dask + dask-sql Parquet MVP
Pivots the project to a runnable MVP per the updated requirements and
removes the prior Scala/Spark implementation (still available in git history).

- Source: Parquet only (Hive-style partitions), read with Dask
- Compute: dask-sql executes user-supplied check_sql read-only
- I/O: CSV config in, CSV results + exceptions out (no database)
- Flow: read config (DQ checks with check_sql) -> Dask -> exceptions CSV
- Checks: completeness, validity, consistency (month-on-month)
- Issue classification: new / recurring / resolved
- Run report carries the month-end date

Adds dq_engine/ package, pytest suite (36 passing), sample config CSVs,
mock-parquet + history-seed generators, and rewritten requirements/design/
tasks + Jira stories. Removes Scala src/, db/, pom.xml, docker-compose.yml.
Case management removed from scope.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>